--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
             </ul>
 				<h2>Technical stuff</h2>
 				<ul>
+					<li>For front-end web technologies, I have experience with JavaScript, HTML, CSS, and React.js </li>
                <li>These are the technologies I use to build various projects. I always try to improve my knowledge and learn something new with each new project.There can always be improvements made and new things to learn. I have experience and knowledge of Sass, JS, React JS, Redux, Node.js, Express.js, MongoDB, Docker, Git, Responsive Design and more...</li>
             </ul>
 				<h2>Projects</h2>
-				<ul></ul>
+				<ul>
+					
+				</ul>
 
             <h2>Get in Touch</h2>
             <p>I’d love to hear about what you're working on and how I could help. I’m currently looking for a new role and am open to a wide range of opportunities. I am open to new technologies and ways to code, whatever tool is needed for the job. I’m a hard-working and positive person who will always approach each task with a sense of purpose and attention to detail. Creativity, discipline, perseverance and hard work are my values. Please do feel free to check out my online profiles below and get in touch using the form.</p>
