--- a/index.html
+++ b/index.html
@@ -9,36 +9,88 @@
 	<body>
 		<div>
 			<main>
-				<img src="" alt="its me" />
+				<img src="" alt="its me" decoding="async" width="144" height="144" />
 				<p>
 					Hi, my name is You Kwhan Kim. I live in White Plains, New York.
 					<br />
 					You can reach out to me at Youkwhan@gmail.com
 				</p>
+				<p>
+					This site is meant to be a brief introduction of myself. A brief
+					rundown on past expereinces, things I've built, and stuff that I find
+					interesting.
+				</p>
+
 				<h2>About me</h2>
 				<ul>
-               <li>I am a recent graduate with B.S in Applied Mathematics and Statstics, and Economics from Stony Brook University, with a focus on Computer Science.</li>
-               <li>I'm a full-stack software engineer by trade, with experience mostly in web development.</li>
-               <li>My focus is on writing modern and clean code with React.js, while using best practices. </li>
-               <li>In my free time, I like to work on </li>
-            </ul>
+					<li>
+						I am a recent graduate with a B.S in Applied Mathematics and
+						Statstics, and Economics from Stony Brook University, with a focus
+						on Computer Science.
+					</li>
+					<li>
+						I'm a full-stack software engineer by trade, with experience mostly
+						in web development.
+					</li>
+					<li>
+						My focus is to be always learning. Writing beautiful, optimized
+						code, while using best practices.
+					</li>
+					<li>
+						In my free time, I enjoy playing piano, card games, and listening to
+						music.
+					</li>
+				</ul>
 				<h2>Technical stuff</h2>
 				<ul>
-					<li>For front-end web technologies, I have experience with JavaScript, HTML, CSS, and React.js </li>
-               <li>These are the technologies I use to build various projects. I always try to improve my knowledge and learn something new with each new project.There can always be improvements made and new things to learn. I have experience and knowledge of Sass, JS, React JS, Redux, Node.js, Express.js, MongoDB, Docker, Git, Responsive Design and more...</li>
-            </ul>
-				<h2>Projects</h2>
-				<ul>
-					
+					<li>
+						For front-end web technologies, I have experience with HTML/CSS
+						(Tailwind, Bootstrap), and Javascript (React.js)
+					</li>
+					<li>
+						I also have experience and knowledge of Python (Pygame), CI/CD
+						(Github Actions), Firebase (Cloud Firestore), Sanity.io (Headless
+						CMS).
+					</li>
+					<li>
+						I always try to improve my knowledge and learn something new with
+						each new project. There can always be improvements made and new
+						things to learn. Currently, I'm interested in learning more of
+						Node.js, Express.js, SQL, MongoDB.
+					</li>
 				</ul>
+				<h2>Projects</h2>
+				<ul></ul>
 
-            <h2>Get in Touch</h2>
-            <p>I’d love to hear about what you're working on and how I could help. I’m currently looking for a new role and am open to a wide range of opportunities. I am open to new technologies and ways to code, whatever tool is needed for the job. I’m a hard-working and positive person who will always approach each task with a sense of purpose and attention to detail. Creativity, discipline, perseverance and hard work are my values. Please do feel free to check out my online profiles below and get in touch using the form.</p>
-            <a>Github, Linkden</a>
-            Contact Me
-            <form>
-               <label for="">name</label>
-            </form>
+				<h2>Get in Touch</h2>
+				<p>
+					I’d love to hear about what you're working on and how I could help.
+					I’m currently looking for a new role and am open to a wide range of
+					opportunities. I am open to new technologies and ways to code,
+					whatever tool is needed for the job. I’m a hard-working and positive
+					person who will always approach each task with a sense of purpose and
+					attention to detail. Creativity, discipline, perseverance and hard
+					work are my values. Please do feel free to check out my online
+					profiles below and get in touch using the form.
+				</p>
+				<a href="https://github.com/Youkwhan">Github</a>
+				<a href="https://www.linkedin.com/in/youkwhan/">Linkedin</a>
+				<p>Youkwhan@gmail.com</p>
+
+				<h3>Contact Me</h3>
+				<form
+					action="mailto:Youkwhan@gmail.com"
+					method="post"
+					enctype="text/plain"
+				>
+					<label>Your Name:</label>
+					<input type="text" name="yourName" value="" /><br />
+					<label>Your Email:</label>
+					<input type="email" name="yourEmail" value="" /><br />
+					<label>Your Message:</label><br />
+					<textarea name="yourMessage" rows="10" cols="30"></textarea><br />
+					<input type="submit" name="" />
+				</form>
 			</main>
 		</div>
 	</body>
