--- a/index.html
+++ b/index.html
@@ -11,67 +11,55 @@
 			<main>
 				<img src="" alt="its me" decoding="async" width="144" height="144" />
 				<p>
-					Hi, my name is You Kwhan Kim. I live in White Plains, New York.
+					Hi, my name is You Kwhan Kim, and I live in White Plains, New York.
 					<br />
-					You can reach out to me at Youkwhan@gmail.com
+					You can reach out to me at Youkwhan@gmail.com.
 				</p>
 				<p>
-					This site is meant to be a brief introduction of myself. A brief
-					rundown on past expereinces, things I've built, and stuff that I find
-					interesting.
+					This site is a brief introduction of myself, showcasing my past experiences, projects, and interests.
 				</p>
 
 				<h2>About me</h2>
 				<ul>
 					<li>
-						I am a recent graduate with a B.S in Applied Mathematics and
-						Statstics, and Economics from Stony Brook University, with a focus
-						on Computer Science.
+						I am a recent graduate with a B.S. in Applied Mathematics and Statistics, and Economics from Stony Brook University, with a focus on Computer Science.
 					</li>
 					<li>
 						I'm a full-stack software engineer by trade, with experience mostly
 						in web development.
 					</li>
 					<li>
-						My focus is to be always learning. Writing beautiful, optimized
-						code, while using best practices.
+						My goal is to continuously learn and improve my skills by writing optimized code and adhering to best practices.
 					</li>
 					<li>
-						In my free time, I enjoy playing piano, card games, and listening to
-						music.
+						In my free time, I enjoy playing piano, card games, and listening to music.
 					</li>
 				</ul>
 				<h2>Technical stuff</h2>
 				<ul>
 					<li>
-						For front-end web technologies, I have experience with HTML/CSS
-						(Tailwind, Bootstrap), and Javascript (React.js)
+						In the realm of front-end web development, I have hands-on experience with HTML/CSS (Tailwind, Bootstrap) and Javascript (React.js).
 					</li>
 					<li>
-						I also have experience and knowledge of Python (Pygame), CI/CD
-						(Github Actions), Firebase (Cloud Firestore), Sanity.io (Headless
-						CMS).
+						I am also proficient in Python (Pygame), CI/CD (GitHub Actions), Firebase (Cloud Firestore), and Sanity.io (Headless CMS).
 					</li>
 					<li>
-						I always try to improve my knowledge and learn something new with
-						each new project. There can always be improvements made and new
-						things to learn. Currently, I'm interested in learning more of
-						Node.js, Express.js, SQL, MongoDB.
+						I am always looking to expand my knowledge and am currently exploring Node.js, Express.js, SQL, and MongoDB.
 					</li>
 				</ul>
 				<h2>Projects</h2>
-				<ul></ul>
+				<ul>
+					<li>quikpic</li>
+					<li>Calendar Scheduler</li>
+					<li>Ecommerce site</li>
+					<li>Dashboard</li> 
+					<li>Automated Resume Parser</li>
+					<li>Google map</li>
+					<li>Reef Reviver</li>
 
 				<h2>Get in Touch</h2>
 				<p>
-					I’d love to hear about what you're working on and how I could help.
-					I’m currently looking for a new role and am open to a wide range of
-					opportunities. I am open to new technologies and ways to code,
-					whatever tool is needed for the job. I’m a hard-working and positive
-					person who will always approach each task with a sense of purpose and
-					attention to detail. Creativity, discipline, perseverance and hard
-					work are my values. Please do feel free to check out my online
-					profiles below and get in touch using the form.
+					I am open to new opportunities and would love to hear about any projects you are working on. I am a hard-working, positive person who approaches every task with dedication and attention to detail. My values include creativity, discipline, perseverance, and hard work. Please feel free to check out my online profiles and reach out to me using the form below. I look forward to connecting with you!
 				</p>
 				<a href="https://github.com/Youkwhan">Github</a>
 				<a href="https://www.linkedin.com/in/youkwhan/">Linkedin</a>
