implemented internal css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>You Kim</title>
+		<style>
+			body {
+				background-color: #EAF6F6;
+			}
+			
+			hr {
+				border-style: none;
+				border-top-style: dotted;
+				border-color: grey;
+				border-width: 5px;
+				width: 5%;
+			}
+
+		</style>
 	</head>
 	<body>
 		<div>
@@ -18,7 +32,7 @@
 				<p>
 					This site is a brief introduction of myself, showcasing my past experiences, projects, and interests.
 				</p>
-
+				<hr>
 				<h2>About me</h2>
 				<ul>
 					<li>
@@ -35,6 +49,7 @@
 						In my free time, I enjoy playing piano, card games, and listening to music.
 					</li>
 				</ul>
+				
 				<h2>Technical stuff</h2>
 				<ul>
 					<li>
@@ -47,6 +62,7 @@
 						I am always looking to expand my knowledge and am currently exploring Node.js, Express.js, SQL, and MongoDB.
 					</li>
 				</ul>
+				
 				<h2>Projects</h2>
 				<ul>
 					<li>quikpic</li>
@@ -56,7 +72,8 @@
 					<li>Automated Resume Parser</li>
 					<li>Google map</li>
 					<li>Reef Reviver</li>
-
+				</ul>
+				<hr>
 				<h2>Get in Touch</h2>
 				<p>
 					I am open to new opportunities and would love to hear about any projects you are working on. I am a hard-working, positive person who approaches every task with dedication and attention to detail. My values include creativity, discipline, perseverance, and hard work. Please feel free to check out my online profiles and reach out to me using the form below. I look forward to connecting with you!
