--- a/index.html
+++ b/index.html
@@ -5,20 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>You Kim</title>
-		<style>
-			body {
-				background-color: #EAF6F6;
-			}
-			
-			hr {
-				border-style: none;
-				border-top-style: dotted;
-				border-color: grey;
-				border-width: 5px;
-				width: 5%;
-			}
-
-		</style>
+		<link rel="stylesheet" href="./css/styles.css">
 	</head>
 	<body>
 		<div>
@@ -30,53 +17,67 @@
 					You can reach out to me at Youkwhan@gmail.com.
 				</p>
 				<p>
-					This site is a brief introduction of myself, showcasing my past experiences, projects, and interests.
+					This site is a brief introduction of myself, showcasing my past
+					experiences, projects, and interests.
 				</p>
-				<hr>
+				<hr />
 				<h2>About me</h2>
 				<ul>
 					<li>
-						I am a recent graduate with a B.S. in Applied Mathematics and Statistics, and Economics from Stony Brook University, with a focus on Computer Science.
+						I am a recent graduate with a B.S. in Applied Mathematics and
+						Statistics, and Economics from Stony Brook University, with a focus
+						on Computer Science.
 					</li>
 					<li>
 						I'm a full-stack software engineer by trade, with experience mostly
 						in web development.
 					</li>
 					<li>
-						My goal is to continuously learn and improve my skills by writing optimized code and adhering to best practices.
+						My goal is to continuously learn and improve my skills by writing
+						optimized code and adhering to best practices.
 					</li>
 					<li>
-						In my free time, I enjoy playing piano, card games, and listening to music.
+						In my free time, I enjoy playing piano, card games, and listening to
+						music.
 					</li>
 				</ul>
-				
+				<hr>
 				<h2>Technical stuff</h2>
 				<ul>
 					<li>
-						In the realm of front-end web development, I have hands-on experience with HTML/CSS (Tailwind, Bootstrap) and Javascript (React.js).
+						In the realm of front-end web development, I have hands-on
+						experience with HTML/CSS (Tailwind, Bootstrap) and Javascript
+						(React.js).
 					</li>
 					<li>
-						I am also proficient in Python (Pygame), CI/CD (GitHub Actions), Firebase (Cloud Firestore), and Sanity.io (Headless CMS).
+						I am also proficient in Python (Pygame), CI/CD (GitHub Actions),
+						Firebase (Cloud Firestore), and Sanity.io (Headless CMS).
 					</li>
 					<li>
-						I am always looking to expand my knowledge and am currently exploring Node.js, Express.js, SQL, and MongoDB.
+						I am always looking to expand my knowledge and am currently
+						exploring Node.js, Express.js, SQL, and MongoDB.
 					</li>
 				</ul>
-				
+				<hr>
 				<h2>Projects</h2>
 				<ul>
 					<li>quikpic</li>
 					<li>Calendar Scheduler</li>
 					<li>Ecommerce site</li>
-					<li>Dashboard</li> 
+					<li>Dashboard</li>
 					<li>Automated Resume Parser</li>
 					<li>Google map</li>
 					<li>Reef Reviver</li>
 				</ul>
-				<hr>
+				<hr />
 				<h2>Get in Touch</h2>
 				<p>
-					I am open to new opportunities and would love to hear about any projects you are working on. I am a hard-working, positive person who approaches every task with dedication and attention to detail. My values include creativity, discipline, perseverance, and hard work. Please feel free to check out my online profiles and reach out to me using the form below. I look forward to connecting with you!
+					I am open to new opportunities and would love to hear about any
+					projects you are working on. I am a hard-working, positive person who
+					approaches every task with dedication and attention to detail. My
+					values include creativity, discipline, perseverance, and hard work.
+					Please feel free to check out my online profiles and reach out to me
+					using the form below. I look forward to connecting with you!
 				</p>
 				<a href="https://github.com/Youkwhan">Github</a>
 				<a href="https://www.linkedin.com/in/youkwhan/">Linkedin</a>
