--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>You Kim</title>
-		<link rel="stylesheet" href="./css/styles.css">
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<div>
@@ -41,7 +41,7 @@
 						music.
 					</li>
 				</ul>
-				<hr>
+				<hr />
 				<h2>Technical stuff</h2>
 				<ul>
 					<li>
@@ -58,7 +58,7 @@
 						exploring Node.js, Express.js, SQL, and MongoDB.
 					</li>
 				</ul>
-				<hr>
+				<hr />
 				<h2>Projects</h2>
 				<ul>
 					<li>quikpic</li>
