--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>You Kim</title>
-      <link rel="stylesheet" href="./css/styles.css">
-   </head>
-   <body>
-
-   </body>
+		<title>You Kim</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="icon" type="image/x-icon" href="./images/favicon.ico?v=2" />
+	</head>
+	<body>
+		<div>
+			<h1>I'm You-Kwhan.</h1>
+			<p>a web developer</p>
+		</div>
+	</body>
 </html>
