--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 	</head>
 	<body>
 		<div>
+			<img src="images/cloud.png" alt="cloud-img">
 			<h1>I'm You-Kwhan.</h1>
 			<p>a web developer</p>
+			<img src="images/cloud.png" alt="cloud-img">
+			<img src="images/mountain.png" alt="mmountain-img">
 		</div>
 	</body>
 </html>
