--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>You Kim</title>
 		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico?v=2" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
+
 	<body>
-		<div>
-			<img src="./images/cloud.png" alt="cloud-img">
+		<div class="top-container">
+			<img class="top-cloud" src="./images/cloud.png" alt="cloud-img" />
 			<h1>I'm You-Kwhan.</h1>
 			<p>a web developer</p>
-			<img src="./images/cloud.png" alt="cloud-img">
-			<img src="./images/mountain.png" alt="mmountain-img">
+			<img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img" />
+			<img src="./images/mountain.png" alt="mountain-img" />
 		</div>
 	</body>
 </html>
