css sizing and more context

--- a/index.html
+++ b/index.html
@@ -19,10 +19,100 @@
 	<body>
 		<div class="top-container">
 			<img class="top-cloud" src="./images/cloud.png" alt="cloud-img" />
-			<h1>I'm You-Kwhan.</h1>
-			<p>a web developer</p>
+			<div class="title-text">
+				<h1>I'm You-Kwhan.</h1>
+				<h2>a <span class="pro">pro</span>grammer.</h2>
+			</div>
 			<img class="bottom-cloud" src="./images/cloud.png" alt="cloud-img" />
 			<img src="./images/mountain.png" alt="mountain-img" />
+		</div>
+
+		<div class="middle-container">
+			<div class="profile">
+				<img class="pfp-img" src="./images/dino.png" alt="its-me" decoding="async" width="144" height="144"  />
+				<h2>Hello.</h2>
+				<p>
+					My name is You Kwhan Kim, and I live in White Plains, New York.
+					<br />
+					You can reach out to me at Youkwhan@gmail.com.
+				</p>
+
+				<h2>About me</h2>
+				<ul>
+					<li>
+						I am a recent graduate with a B.S. in Applied Mathematics and
+						Statistics, and Economics from Stony Brook University, with a focus
+						on Computer Science.
+					</li>
+					<li>
+						I'm a full-stack software engineer by trade, with experience mostly
+						in web development.
+					</li>
+					<li>
+						My goal is to continuously learn and improve my skills by writing
+						optimized code and adhering to best practices.
+					</li>
+					<li>
+						In my free time, I enjoy playing piano, card games, and listening to
+						music.
+					</li>
+				</ul>
+			</div>
+			<hr />
+			<div class="skills">
+				<h2>My Skills.</h2>
+				<div class="skill-row">
+					<img class="technical-img" src="./images/computer-science.png" alt="skill-img" />
+					<h3>Technical stuff</h3>
+					<p>
+						In the realm of front-end web development, I have hands-on
+						experience with HTML/CSS (Tailwind, Bootstrap) and Javascript
+						(React.js).
+						<br>
+						I am also proficient in Python (Pygame), CI/CD (GitHub Actions),
+						Firebase (Cloud Firestore), and Sanity.io (Headless CMS).
+						<br>
+						I am always looking to expand my knowledge and am currently
+						exploring Node.js, Express.js, SQL, and MongoDB.
+					</p>
+				</div>
+				<div class="skill-row">
+					<img class="project-img" src="./images/sculpture.png" alt="project-img" />
+					<h3>Projects</h3>
+					<p>
+						<ul>
+							<li>quikpic</li>
+							<li>Calendar Scheduler</li>
+							<li>Ecommerce site</li>
+							<li>Dashboard</li>
+							<li>Automated Resume Parser</li>
+							<li>Google map</li>
+							<li>Reef Reviver</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+			<hr />
+			<div class="contact-me">
+				<h2>Get In Touch</h2>
+				<h3>Lorem ipsum dolor sit amet, non elit.</h3>
+				<p>
+					I am open to new opportunities and would love to hear about any
+					projects you are working on. I am a hard-working, positive person who
+					approaches every task with dedication and attention to detail. My
+					values include creativity, discipline, perseverance, and hard work.
+					Please feel free to check out my online profiles and reach out to me
+					using the form below. I look forward to connecting with you!
+				</p>
+				<a class="btn" href="mailto:Youkwhan@email.com">CONTACT ME</a>
+			</div>
+		</div>
+
+		<div class="bottom-container">
+			<a class="footer-link" href="https://www.linkedin.com/in/youkwhan/">LinkedIn</a>
+			<a class="footer-link" href="https://github.com/Youkwhan">Github</a>
+			<a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+			<p>© 2023 You Kwhan Kim.</p>
 		</div>
 	</body>
 </html>
