--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<img class="pfp-img" src="./images/dino.png" alt="its-me" decoding="async" width="144" height="144"  />
 				<h2>Hello.</h2>
 				<p>
-					My name is You Kwhan Kim, and I live in White Plains, New York.
+					My name is You Kwhan Kim, a Web Developer based in White Plains, New York.
 					<br />
 					You can reach out to me at Youkwhan@gmail.com.
 				</p>
@@ -102,7 +102,7 @@
 					approaches every task with dedication and attention to detail. My
 					values include creativity, discipline, perseverance, and hard work.
 					Please feel free to check out my online profiles and reach out to me
-					using the form below. I look forward to connecting with you!
+					using the links below. I look forward to connecting with you!
 				</p>
 				<a class="btn" href="mailto:Youkwhan@email.com">CONTACT ME</a>
 			</div>
