float wrap text and img, skill section

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 			<div class="skills">
 				<h2>My Skills.</h2>
 				<div class="skill-row">
-					<img class="technical-img" src="./images/computer-science.png" alt="skill-img" />
+					<img class="skill-img1" src="./images/computer-science.png" alt="skill-img" />
 					<h3>Technical stuff</h3>
-					<p>
+					<p class="code-experience">
 						In the realm of front-end web development, I have hands-on
 						experience with HTML/CSS (Tailwind, Bootstrap) and Javascript
 						(React.js).
@@ -77,9 +77,9 @@
 					</p>
 				</div>
 				<div class="skill-row">
-					<img class="project-img" src="./images/sculpture.png" alt="project-img" />
+					<img class="skill-img2" src="./images/sculpture.png" alt="project-img" />
 					<h3>Projects</h3>
-					<p>
+					<p class="code-projects">
 						<ul>
 							<li>quikpic</li>
 							<li>Calendar Scheduler</li>
