styling, next design/text

--- a/index.html
+++ b/index.html
@@ -31,32 +31,28 @@
 			<div class="profile">
 				<img class="pfp-img" src="./images/dino.png" alt="its-me" decoding="async" width="144" height="144"  />
 				<h2>Hello.</h2>
-				<p>
+				<p class="intro">
 					My name is You Kwhan Kim, a Web Developer based in White Plains, New York.
 					<br />
 					You can reach out to me at Youkwhan@gmail.com.
 				</p>
 
 				<h2>About me</h2>
-				<ul>
-					<li>
+				<p>
+					
 						I am a recent graduate with a B.S. in Applied Mathematics and
 						Statistics, and Economics from Stony Brook University, with a focus
 						on Computer Science.
-					</li>
-					<li>
+					<br>
 						I'm a full-stack software engineer by trade, with experience mostly
 						in web development.
-					</li>
-					<li>
+					<br>
 						My goal is to continuously learn and improve my skills by writing
 						optimized code and adhering to best practices.
-					</li>
-					<li>
+					<br>
 						In my free time, I enjoy playing piano, card games, and listening to
 						music.
-					</li>
-				</ul>
+				</p>
 			</div>
 			<hr />
 			<div class="skills">
@@ -96,7 +92,7 @@
 			<div class="contact-me">
 				<h2>Get In Touch</h2>
 				<h3>Lorem ipsum dolor sit amet, non elit.</h3>
-				<p>
+				<p class="contact-message">
 					I am open to new opportunities and would love to hear about any
 					projects you are working on. I am a hard-working, positive person who
 					approaches every task with dedication and attention to detail. My
@@ -112,7 +108,7 @@
 			<a class="footer-link" href="https://www.linkedin.com/in/youkwhan/">LinkedIn</a>
 			<a class="footer-link" href="https://github.com/Youkwhan">Github</a>
 			<a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-			<p>© 2023 You Kwhan Kim.</p>
+			<p class="copyright">© 2023 You Kwhan Kim.</p>
 		</div>
 	</body>
 </html>
