--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="spacing"></div>
         <!-- start of slide show -->
         <div class="slideshow">
-            <h1>Some Projects at Glance</h2>
+            <h1>Glimpse into my Work</h2>
                 <!-- Slideshow container -->
                 <div class="slideshow-container">
 
