--- a/index.html
+++ b/index.html
@@ -99,40 +99,34 @@
 
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                        <div class="numbertext">1 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
+                        <div class="numbertext">1 / 6</div>
+                        <img src="./images/quickpic.png" style="width: 60%">
                         <div class="text">Quikpic</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">2 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
+                        <div class="numbertext">2 / 6</div>
+                        <img src="./images/calendar.png" style="width: 60%">
                         <div class="text">Calendar Scheduler</div>
                     </div>
-
                     <div class="mySlides fade">
-                        <div class="numbertext">3 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
-                        <div class="text">Ecommerce Site</div>
-                    </div>
-                    <div class="mySlides fade">
-                        <div class="numbertext">4 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
+                        <div class="numbertext">3 / 6</div>
+                        <img src="./images/dashboard.png" style="width: 60%">
                         <div class="text">App Manager dashboard</div>
                     </div>
                     <div class="mySlides fade">
-                        <div class="numbertext">5 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
+                        <div class="numbertext">4 / 6</div>
+                        <img src="./images/resume-parser.png" style="width: 60%">
                         <div class="text">Automated Resume Parser</div>
                     </div>
                     <div class="mySlides fade">
-                        <div class="numbertext">6 / 7</div>
-                        <img src="./images/placeholder.jpg" style="width: 50%">
+                        <div class="numbertext">5 / 6</div>
+                        <img src="./images/google-map.png" style="width: 60%">
                         <div class="text">Google maps routing</div>
                     </div>
                     <div class="mySlides fade">
-                     <div class="numbertext">7 / 7</div>
-                     <img src="./images/placeholder.jpg" style="width: 50%">
+                     <div class="numbertext">6 / 6</div>
+                     <img src="./images/reef-reviver.png" style="width: 60%">
                      <div class="text">Reef Reviver</div>
                  </div>
 
@@ -150,7 +144,6 @@
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
                     <span class="dot" onclick="currentSlide(6)"></span>
-                    <span class="dot" onclick="currentSlide(7)"></span>
                 </div>
         </div>
         <!-- end of slide show -->
